--- a/css/body.css
+++ b/css/body.css
@@ -38,7 +38,8 @@
     flex: 1;
     text-align: left;
     margin-right: 30px;
-    font-size: 30px;
-    font-family: Edu AU VIC WA NT Hand;
+    font-size: 20px;
+    font-family:  Verdana, sans-serif;
     margin-left: 5%;
+    flex-wrap: wrap;
 }
