--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -4,6 +4,7 @@
     text-align: center;
     justify-content: space-between;
     margin: 20px;
+    flex-wrap: wrap;
 }
 .header_logo {
     font-size: 30px;
@@ -32,7 +33,6 @@
     font-weight: 500px;
     line-height: 43px;
     font-family:  "Edu AU VIC WA NT Hand", cursive;
-
     cursor: pointer;
 }
 a{
