--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,7 @@
 .lucielle{
     width: 100%;
-    height: 700px;
-    background-color: rgb(22, 21, 23);
+    height: 500px;
+    background-color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     width: 100%;
@@ -35,11 +35,14 @@
     }
 }
 .text1{
+    max-height: 400px;
     flex: 1;
     text-align: left;
     margin-right: 30px;
     font-size: 20px;
-    font-family:  Verdana, sans-serif;
+    font-family:  "Edu AU VIC WA NT Hand";
     margin-left: 5%;
     flex-wrap: wrap;
+    color: black;
+    font-weight: 600;
 }
