--- a/css/body.css
+++ b/css/body.css
@@ -45,5 +45,7 @@
     flex-wrap: wrap;
     color: black;
     font-weight: 600;
+    display: flex;
+    flex-direction: column;
     overflow: auto;
 }
