--- a/css/body.css
+++ b/css/body.css
@@ -1,21 +1,35 @@
 .lucielle{
     width: 100%;
-    height: 500px;
-    background-color: rgb(255, 255, 255);
+    height: 70vh;
+    background-color: rgb(0, 0, 0);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     width: 100%;
 }
+
+
+.conteneur{
+    width: 50%;
+    margin: auto;
+}
+
+
+
 .img1{
     background-image: url('../image/img1.jpg');
     width: 450px;
+    max-width: 50%;
     height: 400px;
     background-size: cover;
-    margin-right: 5%;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    /* margin-right: 5%;
     margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 40px; */
     border-radius: 80px;
+    /* box-shadow: 20px 10px 15px 10px rgba(255, 252, 252, 0.5);); */
     transition: 0.5s;
     transform-style: preserve-3d;
     animation-delay: 3s;
@@ -46,6 +60,6 @@
     font-family:  "Edu AU VIC WA NT Hand";
     margin-left: 5%;
     flex-wrap: wrap;
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: 600;
 }
