--- a/connexion/register.css
+++ b/connexion/register.css
@@ -65,10 +65,11 @@ input{
     
 }
 .conteneur{
-    width: 100%;
-	height: 100vh;
+    width: 80%;
+	height: 80vh;
 	border: 2px transparent rgb(255, 255, 255);
 	display: flex;
 	flex-direction: row;
     overflow: hidden;
+    align-items: center;
 }
