--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,7 @@
 .lucielle{
     width: 100%;
     height: 70vh;
-    background-color: rgb(0, 0, 0);
+     background-color: white/*rgb(28, 28, 133)rgb(0, 0, 0)*/; 
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -18,9 +18,9 @@
 
 .img1{
     background-image: url('../image/img1.jpg');
-    width: 450px;
+    width: 400px;
     max-width: 50%;
-    height: 400px;
+    height: 300px;
     background-size: cover;
     margin: auto;
     justify-content: center;
@@ -28,7 +28,7 @@
     /* margin-right: 5%;
     margin-top: 20px;
     margin-bottom: 40px; */
-    border-radius: 80px;
+    border-radius: 40px;
     /* box-shadow: 20px 10px 15px 10px rgba(255, 252, 252, 0.5);); */
     transition: 0.5s;
     transform-style: preserve-3d;
@@ -56,10 +56,11 @@
     flex: 1;
     text-align: left;
     margin-right: 30px;
-    font-size: 20px;
+    font-size: 16px;
+    letter-spacing: 0.5px;
     font-family:  "Edu AU VIC WA NT Hand";
     margin-left: 5%;
     flex-wrap: wrap;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-weight: 600;
 }
