--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,7 @@
 .lucielle{
     width: 100%;
     height: 70vh;
-     background-color: white/*rgb(28, 28, 133)rgb(0, 0, 0)*/; 
+     background-color: rgb(255, 255, 255)/*rgb(28, 28, 133)rgb(0, 0, 0)*/; 
     display: flex;
     flex-direction: row;
     align-items: center;
