--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -24,7 +24,7 @@
 
 .header_button{
     padding: 2px 15px;
-    margin: 0 2px;
+    margin: 2px 2px;
 
     border-radius: 10px;
     border: none;
@@ -45,13 +45,13 @@ a{
 
 /* , .header_auth .header_button:nth-child(2) */
 .header_button:hover {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(191, 205, 251, 0.5);
     font-weight: 200;
 }
 
 
 body{
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     color: rgb(0, 0, 0);
     height: 100vh;
     margin: 0;
